--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-site-verification" content="BdDNPK1I_1Y2zoJ8edZKqpsfN03MBe93IFFqhCFBX-A" />
   <title>Toca Boca World APK Unlocked All (Latest Version 2025) – Free Download Guide</title>
   <meta name="description" content="Download Toca Boca World APK Unlocked All (2025). Full guide: features, houses, locations, furniture, mod APK installation, pros/cons, FAQs and SEO-optimized details." />
 
